# robobee

./: BUILD.bazel  IEEETAC_robobee_drag_control_FL.py  IEEETAC_robobee_drag_control_FL_tracking.py  IEEETAC_robobee_drag_control_FL_tracking_CLFQP.py  IEEETAC_robobee_drag_control_FL_tracking_CLFQP_adaptive.py  README.md  RobobeeCLFQPController.h  RobobeeFLController.h  TrajectoOptPlot.cc  input_col_trajopt.txt  input_trajopt.txt  output.txt  pitch3_2to3.out  plot_traj_opt.py  python_test_script.py  quadrotor.urdf  quadrotor_plant.cc  quadrotor_plant.h  robobee.urdf  robobeeBS_class_test2_yaw_scaled.py  robobeeBS_class_test2_yaw_scaled_CLF_QP.py  robobeeBS_class_test2_yaw_scaled_Lissajous.py  robobeeBS_class_test_scaled.py  robobeeBS_torque_drag_control_FL.py  robobee_arena.urdf  robobee_class_feedback_linearization.py  robobee_class_test.py  robobee_class_test_scaled.py  robobee_class_test_scaled_binding.py  robobee_drag_control_FL.py  robobee_plant.cc  robobee_plant.h  robobee_plantBS_example.py  robobee_plantBS_torque_example.py  robobee_plant_aero.py  robobee_plant_aero_disturbance.py  robobee_plant_example.py  robobee_plant_rpy.cc  robobee_plant_rpy.h  robobee_test.py  (+30 more)
test/: quadrotor_dynamics_test.cc  robobee_dynamics_test.cc  run_robobee_traj_optimization.cc  run_robobee_traj_optimization_rpy.cc
